[project]
name = "poetry-matrix"
version = "0.1.0"
description = "carrattrezzi"
authors = [
    {name = "Ettore",email = "198966657+etturo@users.noreply.github.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas (==2.1.0)",
    "matplotlib (==3.7.2)",
    "requests (==2.31.0)",
    "numpy (==1.26.4)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false